// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RevenueBreakdown /> should render correctly with revenue data 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RevenueBreakdown
    revenueStatActions={
      Object {
        "fetch": [MockFunction] {
          "calls": Array [
            Array [
              Object {
                "seasonId": undefined,
              },
            ],
          ],
          "results": Array [
            Object {
              "isThrow": false,
              "value": undefined,
            },
          ],
        },
        "reset": [MockFunction],
      }
    }
    revenueStatState={
      Object {
        "loading": false,
        "ticketBreakdown": Array [
          Object {
            "id": 1,
            "inventory": 10000,
            "name": "Single Game",
            "revenue": 1000,
          },
          Object {
            "id": 2,
            "inventory": 5000,
            "name": "Group Tickets",
            "revenue": 1000,
          },
          Object {
            "id": 3,
            "inventory": 7000,
            "name": "Single Suites",
            "revenue": 1000,
          },
        ],
      }
    }
    type="revenue"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <ForwardRef>
          Revenue Breakdown
        </ForwardRef>,
        <ForwardRef
          height="0.75rem"
        />,
        <React.Fragment>
          <HorizontalBars
            colors={
              Array [
                "#024A8F",
                "#1A4B8A",
                "#4B98CF",
                "#7CBCDD",
                "#C4D2E1",
                "#817CB8",
                "#5A288F",
              ]
            }
            data={
              Array [
                1000,
                1000,
                1000,
              ]
            }
          />
          <ForwardRef
            flexWrap="wrap"
            margin="0 -1rem -1rem"
          >
            <ForwardRef
              flex="0 0 auto"
              padding="1rem"
            >
              <LegendItem
                color="#024A8F"
                label="Single Game"
                value="$1,000"
              />
            </ForwardRef>
            <ForwardRef
              flex="0 0 auto"
              padding="1rem"
            >
              <LegendItem
                color="#1A4B8A"
                label="Group Tickets"
                value="$1,000"
              />
            </ForwardRef>
            <ForwardRef
              flex="0 0 auto"
              padding="1rem"
            >
              <LegendItem
                color="#4B98CF"
                label="Single Suites"
                value="$1,000"
              />
            </ForwardRef>
          </ForwardRef>
        </React.Fragment>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Revenue Breakdown",
        },
        "ref": null,
        "rendered": "Revenue Breakdown",
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [
            [Function],
          ],
          "componentStyle": ComponentStyle {
            "componentId": "sc-kAzzGY",
            "isStatic": false,
            "rules": Array [
              "
  margin: 0;
  color: ",
              [Function],
              ";
  font-size: ",
              [Function],
              ";
  font-weight: ",
              [Function],
              ";
",
            ],
          },
          "displayName": "styled.p",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-kAzzGY",
          "target": "p",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        },
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "height": "0.75rem",
        },
        "ref": null,
        "rendered": null,
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-ksYbfQ",
            "isStatic": false,
            "rules": Array [
              "
  ",
              [Function],
              "
  ",
              [Function],
              "
  ",
              [Function],
              "
  ",
              [Function],
              "
  ",
              [Function],
              "
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-ksYbfQ",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        },
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <HorizontalBars
              colors={
                Array [
                  "#024A8F",
                  "#1A4B8A",
                  "#4B98CF",
                  "#7CBCDD",
                  "#C4D2E1",
                  "#817CB8",
                  "#5A288F",
                ]
              }
              data={
                Array [
                  1000,
                  1000,
                  1000,
                ]
              }
            />,
            <ForwardRef
              flexWrap="wrap"
              margin="0 -1rem -1rem"
            >
              <ForwardRef
                flex="0 0 auto"
                padding="1rem"
              >
                <LegendItem
                  color="#024A8F"
                  label="Single Game"
                  value="$1,000"
                />
              </ForwardRef>
              <ForwardRef
                flex="0 0 auto"
                padding="1rem"
              >
                <LegendItem
                  color="#1A4B8A"
                  label="Group Tickets"
                  value="$1,000"
                />
              </ForwardRef>
              <ForwardRef
                flex="0 0 auto"
                padding="1rem"
              >
                <LegendItem
                  color="#4B98CF"
                  label="Single Suites"
                  value="$1,000"
                />
              </ForwardRef>
            </ForwardRef>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "colors": Array [
                "#024A8F",
                "#1A4B8A",
                "#4B98CF",
                "#7CBCDD",
                "#C4D2E1",
                "#817CB8",
                "#5A288F",
              ],
              "data": Array [
                1000,
                1000,
                1000,
              ],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                <ForwardRef
                  flex="0 0 auto"
                  padding="1rem"
                >
                  <LegendItem
                    color="#024A8F"
                    label="Single Game"
                    value="$1,000"
                  />
                </ForwardRef>,
                <ForwardRef
                  flex="0 0 auto"
                  padding="1rem"
                >
                  <LegendItem
                    color="#1A4B8A"
                    label="Group Tickets"
                    value="$1,000"
                  />
                </ForwardRef>,
                <ForwardRef
                  flex="0 0 auto"
                  padding="1rem"
                >
                  <LegendItem
                    color="#4B98CF"
                    label="Single Suites"
                    value="$1,000"
                  />
                </ForwardRef>,
              ],
              "flexWrap": "wrap",
              "margin": "0 -1rem -1rem",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "0",
                "nodeType": "function",
                "props": Object {
                  "children": <LegendItem
                    color="#024A8F"
                    label="Single Game"
                    value="$1,000"
                  />,
                  "flex": "0 0 auto",
                  "padding": "1rem",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "color": "#024A8F",
                    "label": "Single Game",
                    "value": "$1,000",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-kEYyzF",
                    "isStatic": false,
                    "rules": Array [
                      "
  flex: ",
                      [Function],
                      ";
  height: ",
                      [Function],
                      ";
  width: ",
                      [Function],
                      ";
  align-self: ",
                      [Function],
                      ";
  margin: ",
                      [Function],
                      ";
  padding: ",
                      [Function],
                      ";
",
                    ],
                  },
                  "defaultProps": Object {
                    "flex": 1,
                  },
                  "displayName": "FlexItem",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-kEYyzF",
                  "target": "div",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                },
              },
              Object {
                "instance": null,
                "key": "1",
                "nodeType": "function",
                "props": Object {
                  "children": <LegendItem
                    color="#1A4B8A"
                    label="Group Tickets"
                    value="$1,000"
                  />,
                  "flex": "0 0 auto",
                  "padding": "1rem",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "color": "#1A4B8A",
                    "label": "Group Tickets",
                    "value": "$1,000",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-kEYyzF",
                    "isStatic": false,
                    "rules": Array [
                      "
  flex: ",
                      [Function],
                      ";
  height: ",
                      [Function],
                      ";
  width: ",
                      [Function],
                      ";
  align-self: ",
                      [Function],
                      ";
  margin: ",
                      [Function],
                      ";
  padding: ",
                      [Function],
                      ";
",
                    ],
                  },
                  "defaultProps": Object {
                    "flex": 1,
                  },
                  "displayName": "FlexItem",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-kEYyzF",
                  "target": "div",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                },
              },
              Object {
                "instance": null,
                "key": "2",
                "nodeType": "function",
                "props": Object {
                  "children": <LegendItem
                    color="#4B98CF"
                    label="Single Suites"
                    value="$1,000"
                  />,
                  "flex": "0 0 auto",
                  "padding": "1rem",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "color": "#4B98CF",
                    "label": "Single Suites",
                    "value": "$1,000",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-kEYyzF",
                    "isStatic": false,
                    "rules": Array [
                      "
  flex: ",
                      [Function],
                      ";
  height: ",
                      [Function],
                      ";
  width: ",
                      [Function],
                      ";
  align-self: ",
                      [Function],
                      ";
  margin: ",
                      [Function],
                      ";
  padding: ",
                      [Function],
                      ";
",
                    ],
                  },
                  "defaultProps": Object {
                    "flex": 1,
                  },
                  "displayName": "FlexItem",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-kEYyzF",
                  "target": "div",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                },
              },
            ],
            "type": Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-hMqMXs",
                "isStatic": false,
                "rules": Array [
                  "
  display: ",
                  [Function],
                  ";
  flex: ",
                  [Function],
                  ";
  flex-direction: ",
                  [Function],
                  "
  flex-grow: ",
                  [Function],
                  ";
  flex-shrink: ",
                  [Function],
                  ";
  flex-basis: ",
                  [Function],
                  ";
  flex-wrap: ",
                  [Function],
                  ";
  order: ",
                  [Function],
                  ";
  justify-content: ",
                  [Function],
                  ";
  align-items: ",
                  [Function],
                  ";
  align-content: ",
                  [Function],
                  ";
  align-self: ",
                  [Function],
                  ";
  height: ",
                  [Function],
                  ";
  width: ",
                  [Function],
                  ";
",
                  "
    margin: ",
                  [Function],
                  ";
    margin-top: ",
                  [Function],
                  ";
    margin-bottom: ",
                  [Function],
                  ";
    margin-left: ",
                  [Function],
                  ";
    margin-right: ",
                  [Function],
                  ";

    padding: ",
                  [Function],
                  ";
    padding-top: ",
                  [Function],
                  ";
    padding-bottom: ",
                  [Function],
                  ";
    padding-left: ",
                  [Function],
                  ";
    padding-right: ",
                  [Function],
                  ";

    border: ",
                  [Function],
                  ";
    border-top: ",
                  [Function],
                  ";
    border-bottom: ",
                  [Function],
                  ";
    border-left: ",
                  [Function],
                  ";
    border-right: ",
                  [Function],
                  ";
  ",
                ],
              },
              "displayName": "Flex",
              "foldedComponentIds": Array [
                "sc-eNQAEJ",
              ],
              "render": [Function],
              "styledComponentId": "sc-hMqMXs",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            },
          },
        ],
        "type": Symbol(react.fragment),
      },
    ],
    "type": Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "sc-dxgOiQ",
        "isStatic": false,
        "rules": Array [
          "
  width: ",
          [Function],
          ";
  height: ",
          [Function],
          ";
",
          "
    margin: ",
          [Function],
          ";
    margin-top: ",
          [Function],
          ";
    margin-bottom: ",
          [Function],
          ";
    margin-left: ",
          [Function],
          ";
    margin-right: ",
          [Function],
          ";

    padding: ",
          [Function],
          ";
    padding-top: ",
          [Function],
          ";
    padding-bottom: ",
          [Function],
          ";
    padding-left: ",
          [Function],
          ";
    padding-right: ",
          [Function],
          ";

    border: ",
          [Function],
          ";
    border-top: ",
          [Function],
          ";
    border-bottom: ",
          [Function],
          ";
    border-left: ",
          [Function],
          ";
    border-right: ",
          [Function],
          ";
  ",
        ],
      },
      "displayName": "Styled(styled.div)",
      "foldedComponentIds": Array [
        "sc-kpOJdX",
      ],
      "render": [Function],
      "styledComponentId": "sc-dxgOiQ",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <ForwardRef>
            Revenue Breakdown
          </ForwardRef>,
          <ForwardRef
            height="0.75rem"
          />,
          <React.Fragment>
            <HorizontalBars
              colors={
                Array [
                  "#024A8F",
                  "#1A4B8A",
                  "#4B98CF",
                  "#7CBCDD",
                  "#C4D2E1",
                  "#817CB8",
                  "#5A288F",
                ]
              }
              data={
                Array [
                  1000,
                  1000,
                  1000,
                ]
              }
            />
            <ForwardRef
              flexWrap="wrap"
              margin="0 -1rem -1rem"
            >
              <ForwardRef
                flex="0 0 auto"
                padding="1rem"
              >
                <LegendItem
                  color="#024A8F"
                  label="Single Game"
                  value="$1,000"
                />
              </ForwardRef>
              <ForwardRef
                flex="0 0 auto"
                padding="1rem"
              >
                <LegendItem
                  color="#1A4B8A"
                  label="Group Tickets"
                  value="$1,000"
                />
              </ForwardRef>
              <ForwardRef
                flex="0 0 auto"
                padding="1rem"
              >
                <LegendItem
                  color="#4B98CF"
                  label="Single Suites"
                  value="$1,000"
                />
              </ForwardRef>
            </ForwardRef>
          </React.Fragment>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Revenue Breakdown",
          },
          "ref": null,
          "rendered": "Revenue Breakdown",
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [
              [Function],
            ],
            "componentStyle": ComponentStyle {
              "componentId": "sc-kAzzGY",
              "isStatic": false,
              "rules": Array [
                "
  margin: 0;
  color: ",
                [Function],
                ";
  font-size: ",
                [Function],
                ";
  font-weight: ",
                [Function],
                ";
",
              ],
            },
            "displayName": "styled.p",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-kAzzGY",
            "target": "p",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          },
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": "0.75rem",
          },
          "ref": null,
          "rendered": null,
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-ksYbfQ",
              "isStatic": false,
              "rules": Array [
                "
  ",
                [Function],
                "
  ",
                [Function],
                "
  ",
                [Function],
                "
  ",
                [Function],
                "
  ",
                [Function],
                "
",
              ],
            },
            "displayName": "styled.div",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-ksYbfQ",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          },
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <HorizontalBars
                colors={
                  Array [
                    "#024A8F",
                    "#1A4B8A",
                    "#4B98CF",
                    "#7CBCDD",
                    "#C4D2E1",
                    "#817CB8",
                    "#5A288F",
                  ]
                }
                data={
                  Array [
                    1000,
                    1000,
                    1000,
                  ]
                }
              />,
              <ForwardRef
                flexWrap="wrap"
                margin="0 -1rem -1rem"
              >
                <ForwardRef
                  flex="0 0 auto"
                  padding="1rem"
                >
                  <LegendItem
                    color="#024A8F"
                    label="Single Game"
                    value="$1,000"
                  />
                </ForwardRef>
                <ForwardRef
                  flex="0 0 auto"
                  padding="1rem"
                >
                  <LegendItem
                    color="#1A4B8A"
                    label="Group Tickets"
                    value="$1,000"
                  />
                </ForwardRef>
                <ForwardRef
                  flex="0 0 auto"
                  padding="1rem"
                >
                  <LegendItem
                    color="#4B98CF"
                    label="Single Suites"
                    value="$1,000"
                  />
                </ForwardRef>
              </ForwardRef>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "colors": Array [
                  "#024A8F",
                  "#1A4B8A",
                  "#4B98CF",
                  "#7CBCDD",
                  "#C4D2E1",
                  "#817CB8",
                  "#5A288F",
                ],
                "data": Array [
                  1000,
                  1000,
                  1000,
                ],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": Array [
                  <ForwardRef
                    flex="0 0 auto"
                    padding="1rem"
                  >
                    <LegendItem
                      color="#024A8F"
                      label="Single Game"
                      value="$1,000"
                    />
                  </ForwardRef>,
                  <ForwardRef
                    flex="0 0 auto"
                    padding="1rem"
                  >
                    <LegendItem
                      color="#1A4B8A"
                      label="Group Tickets"
                      value="$1,000"
                    />
                  </ForwardRef>,
                  <ForwardRef
                    flex="0 0 auto"
                    padding="1rem"
                  >
                    <LegendItem
                      color="#4B98CF"
                      label="Single Suites"
                      value="$1,000"
                    />
                  </ForwardRef>,
                ],
                "flexWrap": "wrap",
                "margin": "0 -1rem -1rem",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "0",
                  "nodeType": "function",
                  "props": Object {
                    "children": <LegendItem
                      color="#024A8F"
                      label="Single Game"
                      value="$1,000"
                    />,
                    "flex": "0 0 auto",
                    "padding": "1rem",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "color": "#024A8F",
                      "label": "Single Game",
                      "value": "$1,000",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-kEYyzF",
                      "isStatic": false,
                      "rules": Array [
                        "
  flex: ",
                        [Function],
                        ";
  height: ",
                        [Function],
                        ";
  width: ",
                        [Function],
                        ";
  align-self: ",
                        [Function],
                        ";
  margin: ",
                        [Function],
                        ";
  padding: ",
                        [Function],
                        ";
",
                      ],
                    },
                    "defaultProps": Object {
                      "flex": 1,
                    },
                    "displayName": "FlexItem",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "sc-kEYyzF",
                    "target": "div",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  },
                },
                Object {
                  "instance": null,
                  "key": "1",
                  "nodeType": "function",
                  "props": Object {
                    "children": <LegendItem
                      color="#1A4B8A"
                      label="Group Tickets"
                      value="$1,000"
                    />,
                    "flex": "0 0 auto",
                    "padding": "1rem",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "color": "#1A4B8A",
                      "label": "Group Tickets",
                      "value": "$1,000",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-kEYyzF",
                      "isStatic": false,
                      "rules": Array [
                        "
  flex: ",
                        [Function],
                        ";
  height: ",
                        [Function],
                        ";
  width: ",
                        [Function],
                        ";
  align-self: ",
                        [Function],
                        ";
  margin: ",
                        [Function],
                        ";
  padding: ",
                        [Function],
                        ";
",
                      ],
                    },
                    "defaultProps": Object {
                      "flex": 1,
                    },
                    "displayName": "FlexItem",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "sc-kEYyzF",
                    "target": "div",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  },
                },
                Object {
                  "instance": null,
                  "key": "2",
                  "nodeType": "function",
                  "props": Object {
                    "children": <LegendItem
                      color="#4B98CF"
                      label="Single Suites"
                      value="$1,000"
                    />,
                    "flex": "0 0 auto",
                    "padding": "1rem",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "color": "#4B98CF",
                      "label": "Single Suites",
                      "value": "$1,000",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-kEYyzF",
                      "isStatic": false,
                      "rules": Array [
                        "
  flex: ",
                        [Function],
                        ";
  height: ",
                        [Function],
                        ";
  width: ",
                        [Function],
                        ";
  align-self: ",
                        [Function],
                        ";
  margin: ",
                        [Function],
                        ";
  padding: ",
                        [Function],
                        ";
",
                      ],
                    },
                    "defaultProps": Object {
                      "flex": 1,
                    },
                    "displayName": "FlexItem",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "sc-kEYyzF",
                    "target": "div",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  },
                },
              ],
              "type": Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-hMqMXs",
                  "isStatic": false,
                  "rules": Array [
                    "
  display: ",
                    [Function],
                    ";
  flex: ",
                    [Function],
                    ";
  flex-direction: ",
                    [Function],
                    "
  flex-grow: ",
                    [Function],
                    ";
  flex-shrink: ",
                    [Function],
                    ";
  flex-basis: ",
                    [Function],
                    ";
  flex-wrap: ",
                    [Function],
                    ";
  order: ",
                    [Function],
                    ";
  justify-content: ",
                    [Function],
                    ";
  align-items: ",
                    [Function],
                    ";
  align-content: ",
                    [Function],
                    ";
  align-self: ",
                    [Function],
                    ";
  height: ",
                    [Function],
                    ";
  width: ",
                    [Function],
                    ";
",
                    "
    margin: ",
                    [Function],
                    ";
    margin-top: ",
                    [Function],
                    ";
    margin-bottom: ",
                    [Function],
                    ";
    margin-left: ",
                    [Function],
                    ";
    margin-right: ",
                    [Function],
                    ";

    padding: ",
                    [Function],
                    ";
    padding-top: ",
                    [Function],
                    ";
    padding-bottom: ",
                    [Function],
                    ";
    padding-left: ",
                    [Function],
                    ";
    padding-right: ",
                    [Function],
                    ";

    border: ",
                    [Function],
                    ";
    border-top: ",
                    [Function],
                    ";
    border-bottom: ",
                    [Function],
                    ";
    border-left: ",
                    [Function],
                    ";
    border-right: ",
                    [Function],
                    ";
  ",
                  ],
                },
                "displayName": "Flex",
                "foldedComponentIds": Array [
                  "sc-eNQAEJ",
                ],
                "render": [Function],
                "styledComponentId": "sc-hMqMXs",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              },
            },
          ],
          "type": Symbol(react.fragment),
        },
      ],
      "type": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-dxgOiQ",
          "isStatic": false,
          "rules": Array [
            "
  width: ",
            [Function],
            ";
  height: ",
            [Function],
            ";
",
            "
    margin: ",
            [Function],
            ";
    margin-top: ",
            [Function],
            ";
    margin-bottom: ",
            [Function],
            ";
    margin-left: ",
            [Function],
            ";
    margin-right: ",
            [Function],
            ";

    padding: ",
            [Function],
            ";
    padding-top: ",
            [Function],
            ";
    padding-bottom: ",
            [Function],
            ";
    padding-left: ",
            [Function],
            ";
    padding-right: ",
            [Function],
            ";

    border: ",
            [Function],
            ";
    border-top: ",
            [Function],
            ";
    border-bottom: ",
            [Function],
            ";
    border-left: ",
            [Function],
            ";
    border-right: ",
            [Function],
            ";
  ",
          ],
        },
        "displayName": "Styled(styled.div)",
        "foldedComponentIds": Array [
          "sc-kpOJdX",
        ],
        "render": [Function],
        "styledComponentId": "sc-dxgOiQ",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`<RevenueBreakdown /> should render correctly with revenue data 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RevenueBreakdown
    revenueStatActions={
      Object {
        "fetch": [MockFunction] {
          "calls": Array [
            Array [
              Object {
                "seasonId": undefined,
              },
            ],
          ],
          "results": Array [
            Object {
              "isThrow": false,
              "value": undefined,
            },
          ],
        },
        "reset": [MockFunction],
      }
    }
    revenueStatState={
      Object {
        "loading": false,
        "ticketBreakdown": Array [
          Object {
            "id": 1,
            "inventory": 10000,
            "name": "Single Game",
            "revenue": 1000,
          },
          Object {
            "id": 2,
            "inventory": 5000,
            "name": "Group Tickets",
            "revenue": 1000,
          },
          Object {
            "id": 3,
            "inventory": 7000,
            "name": "Single Suites",
            "revenue": 1000,
          },
        ],
      }
    }
    type="inventory"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <ForwardRef>
          Tickets Sold Breakdown
        </ForwardRef>,
        <ForwardRef
          height="0.75rem"
        />,
        <React.Fragment>
          <HorizontalBars
            colors={
              Array [
                "#024A8F",
                "#1A4B8A",
                "#4B98CF",
                "#7CBCDD",
                "#C4D2E1",
                "#817CB8",
                "#5A288F",
              ]
            }
            data={
              Array [
                undefined,
                undefined,
                undefined,
              ]
            }
          />
          <ForwardRef
            flexWrap="wrap"
            margin="0 -1rem -1rem"
          >
            <ForwardRef
              flex="0 0 auto"
              padding="1rem"
            >
              <LegendItem
                color="#024A8F"
                label="Single Game"
                value="--"
              />
            </ForwardRef>
            <ForwardRef
              flex="0 0 auto"
              padding="1rem"
            >
              <LegendItem
                color="#1A4B8A"
                label="Group Tickets"
                value="--"
              />
            </ForwardRef>
            <ForwardRef
              flex="0 0 auto"
              padding="1rem"
            >
              <LegendItem
                color="#4B98CF"
                label="Single Suites"
                value="--"
              />
            </ForwardRef>
          </ForwardRef>
        </React.Fragment>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Tickets Sold Breakdown",
        },
        "ref": null,
        "rendered": "Tickets Sold Breakdown",
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [
            [Function],
          ],
          "componentStyle": ComponentStyle {
            "componentId": "sc-kAzzGY",
            "isStatic": false,
            "rules": Array [
              "
  margin: 0;
  color: ",
              [Function],
              ";
  font-size: ",
              [Function],
              ";
  font-weight: ",
              [Function],
              ";
",
            ],
          },
          "displayName": "styled.p",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-kAzzGY",
          "target": "p",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        },
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "height": "0.75rem",
        },
        "ref": null,
        "rendered": null,
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-ksYbfQ",
            "isStatic": false,
            "rules": Array [
              "
  ",
              [Function],
              "
  ",
              [Function],
              "
  ",
              [Function],
              "
  ",
              [Function],
              "
  ",
              [Function],
              "
",
            ],
          },
          "displayName": "styled.div",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-ksYbfQ",
          "target": "div",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        },
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <HorizontalBars
              colors={
                Array [
                  "#024A8F",
                  "#1A4B8A",
                  "#4B98CF",
                  "#7CBCDD",
                  "#C4D2E1",
                  "#817CB8",
                  "#5A288F",
                ]
              }
              data={
                Array [
                  undefined,
                  undefined,
                  undefined,
                ]
              }
            />,
            <ForwardRef
              flexWrap="wrap"
              margin="0 -1rem -1rem"
            >
              <ForwardRef
                flex="0 0 auto"
                padding="1rem"
              >
                <LegendItem
                  color="#024A8F"
                  label="Single Game"
                  value="--"
                />
              </ForwardRef>
              <ForwardRef
                flex="0 0 auto"
                padding="1rem"
              >
                <LegendItem
                  color="#1A4B8A"
                  label="Group Tickets"
                  value="--"
                />
              </ForwardRef>
              <ForwardRef
                flex="0 0 auto"
                padding="1rem"
              >
                <LegendItem
                  color="#4B98CF"
                  label="Single Suites"
                  value="--"
                />
              </ForwardRef>
            </ForwardRef>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "colors": Array [
                "#024A8F",
                "#1A4B8A",
                "#4B98CF",
                "#7CBCDD",
                "#C4D2E1",
                "#817CB8",
                "#5A288F",
              ],
              "data": Array [
                undefined,
                undefined,
                undefined,
              ],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                <ForwardRef
                  flex="0 0 auto"
                  padding="1rem"
                >
                  <LegendItem
                    color="#024A8F"
                    label="Single Game"
                    value="--"
                  />
                </ForwardRef>,
                <ForwardRef
                  flex="0 0 auto"
                  padding="1rem"
                >
                  <LegendItem
                    color="#1A4B8A"
                    label="Group Tickets"
                    value="--"
                  />
                </ForwardRef>,
                <ForwardRef
                  flex="0 0 auto"
                  padding="1rem"
                >
                  <LegendItem
                    color="#4B98CF"
                    label="Single Suites"
                    value="--"
                  />
                </ForwardRef>,
              ],
              "flexWrap": "wrap",
              "margin": "0 -1rem -1rem",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "0",
                "nodeType": "function",
                "props": Object {
                  "children": <LegendItem
                    color="#024A8F"
                    label="Single Game"
                    value="--"
                  />,
                  "flex": "0 0 auto",
                  "padding": "1rem",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "color": "#024A8F",
                    "label": "Single Game",
                    "value": "--",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-kEYyzF",
                    "isStatic": false,
                    "rules": Array [
                      "
  flex: ",
                      [Function],
                      ";
  height: ",
                      [Function],
                      ";
  width: ",
                      [Function],
                      ";
  align-self: ",
                      [Function],
                      ";
  margin: ",
                      [Function],
                      ";
  padding: ",
                      [Function],
                      ";
",
                    ],
                  },
                  "defaultProps": Object {
                    "flex": 1,
                  },
                  "displayName": "FlexItem",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-kEYyzF",
                  "target": "div",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                },
              },
              Object {
                "instance": null,
                "key": "1",
                "nodeType": "function",
                "props": Object {
                  "children": <LegendItem
                    color="#1A4B8A"
                    label="Group Tickets"
                    value="--"
                  />,
                  "flex": "0 0 auto",
                  "padding": "1rem",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "color": "#1A4B8A",
                    "label": "Group Tickets",
                    "value": "--",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-kEYyzF",
                    "isStatic": false,
                    "rules": Array [
                      "
  flex: ",
                      [Function],
                      ";
  height: ",
                      [Function],
                      ";
  width: ",
                      [Function],
                      ";
  align-self: ",
                      [Function],
                      ";
  margin: ",
                      [Function],
                      ";
  padding: ",
                      [Function],
                      ";
",
                    ],
                  },
                  "defaultProps": Object {
                    "flex": 1,
                  },
                  "displayName": "FlexItem",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-kEYyzF",
                  "target": "div",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                },
              },
              Object {
                "instance": null,
                "key": "2",
                "nodeType": "function",
                "props": Object {
                  "children": <LegendItem
                    color="#4B98CF"
                    label="Single Suites"
                    value="--"
                  />,
                  "flex": "0 0 auto",
                  "padding": "1rem",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "color": "#4B98CF",
                    "label": "Single Suites",
                    "value": "--",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "attrs": Array [],
                  "componentStyle": ComponentStyle {
                    "componentId": "sc-kEYyzF",
                    "isStatic": false,
                    "rules": Array [
                      "
  flex: ",
                      [Function],
                      ";
  height: ",
                      [Function],
                      ";
  width: ",
                      [Function],
                      ";
  align-self: ",
                      [Function],
                      ";
  margin: ",
                      [Function],
                      ";
  padding: ",
                      [Function],
                      ";
",
                    ],
                  },
                  "defaultProps": Object {
                    "flex": 1,
                  },
                  "displayName": "FlexItem",
                  "foldedComponentIds": Array [],
                  "render": [Function],
                  "styledComponentId": "sc-kEYyzF",
                  "target": "div",
                  "toString": [Function],
                  "warnTooManyClasses": [Function],
                  "withComponent": [Function],
                },
              },
            ],
            "type": Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-hMqMXs",
                "isStatic": false,
                "rules": Array [
                  "
  display: ",
                  [Function],
                  ";
  flex: ",
                  [Function],
                  ";
  flex-direction: ",
                  [Function],
                  "
  flex-grow: ",
                  [Function],
                  ";
  flex-shrink: ",
                  [Function],
                  ";
  flex-basis: ",
                  [Function],
                  ";
  flex-wrap: ",
                  [Function],
                  ";
  order: ",
                  [Function],
                  ";
  justify-content: ",
                  [Function],
                  ";
  align-items: ",
                  [Function],
                  ";
  align-content: ",
                  [Function],
                  ";
  align-self: ",
                  [Function],
                  ";
  height: ",
                  [Function],
                  ";
  width: ",
                  [Function],
                  ";
",
                  "
    margin: ",
                  [Function],
                  ";
    margin-top: ",
                  [Function],
                  ";
    margin-bottom: ",
                  [Function],
                  ";
    margin-left: ",
                  [Function],
                  ";
    margin-right: ",
                  [Function],
                  ";

    padding: ",
                  [Function],
                  ";
    padding-top: ",
                  [Function],
                  ";
    padding-bottom: ",
                  [Function],
                  ";
    padding-left: ",
                  [Function],
                  ";
    padding-right: ",
                  [Function],
                  ";

    border: ",
                  [Function],
                  ";
    border-top: ",
                  [Function],
                  ";
    border-bottom: ",
                  [Function],
                  ";
    border-left: ",
                  [Function],
                  ";
    border-right: ",
                  [Function],
                  ";
  ",
                ],
              },
              "displayName": "Flex",
              "foldedComponentIds": Array [
                "sc-eNQAEJ",
              ],
              "render": [Function],
              "styledComponentId": "sc-hMqMXs",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            },
          },
        ],
        "type": Symbol(react.fragment),
      },
    ],
    "type": Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "sc-dxgOiQ",
        "isStatic": false,
        "rules": Array [
          "
  width: ",
          [Function],
          ";
  height: ",
          [Function],
          ";
",
          "
    margin: ",
          [Function],
          ";
    margin-top: ",
          [Function],
          ";
    margin-bottom: ",
          [Function],
          ";
    margin-left: ",
          [Function],
          ";
    margin-right: ",
          [Function],
          ";

    padding: ",
          [Function],
          ";
    padding-top: ",
          [Function],
          ";
    padding-bottom: ",
          [Function],
          ";
    padding-left: ",
          [Function],
          ";
    padding-right: ",
          [Function],
          ";

    border: ",
          [Function],
          ";
    border-top: ",
          [Function],
          ";
    border-bottom: ",
          [Function],
          ";
    border-left: ",
          [Function],
          ";
    border-right: ",
          [Function],
          ";
  ",
        ],
      },
      "displayName": "Styled(styled.div)",
      "foldedComponentIds": Array [
        "sc-kpOJdX",
      ],
      "render": [Function],
      "styledComponentId": "sc-dxgOiQ",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <ForwardRef>
            Tickets Sold Breakdown
          </ForwardRef>,
          <ForwardRef
            height="0.75rem"
          />,
          <React.Fragment>
            <HorizontalBars
              colors={
                Array [
                  "#024A8F",
                  "#1A4B8A",
                  "#4B98CF",
                  "#7CBCDD",
                  "#C4D2E1",
                  "#817CB8",
                  "#5A288F",
                ]
              }
              data={
                Array [
                  undefined,
                  undefined,
                  undefined,
                ]
              }
            />
            <ForwardRef
              flexWrap="wrap"
              margin="0 -1rem -1rem"
            >
              <ForwardRef
                flex="0 0 auto"
                padding="1rem"
              >
                <LegendItem
                  color="#024A8F"
                  label="Single Game"
                  value="--"
                />
              </ForwardRef>
              <ForwardRef
                flex="0 0 auto"
                padding="1rem"
              >
                <LegendItem
                  color="#1A4B8A"
                  label="Group Tickets"
                  value="--"
                />
              </ForwardRef>
              <ForwardRef
                flex="0 0 auto"
                padding="1rem"
              >
                <LegendItem
                  color="#4B98CF"
                  label="Single Suites"
                  value="--"
                />
              </ForwardRef>
            </ForwardRef>
          </React.Fragment>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Tickets Sold Breakdown",
          },
          "ref": null,
          "rendered": "Tickets Sold Breakdown",
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [
              [Function],
            ],
            "componentStyle": ComponentStyle {
              "componentId": "sc-kAzzGY",
              "isStatic": false,
              "rules": Array [
                "
  margin: 0;
  color: ",
                [Function],
                ";
  font-size: ",
                [Function],
                ";
  font-weight: ",
                [Function],
                ";
",
              ],
            },
            "displayName": "styled.p",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-kAzzGY",
            "target": "p",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          },
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": "0.75rem",
          },
          "ref": null,
          "rendered": null,
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-ksYbfQ",
              "isStatic": false,
              "rules": Array [
                "
  ",
                [Function],
                "
  ",
                [Function],
                "
  ",
                [Function],
                "
  ",
                [Function],
                "
  ",
                [Function],
                "
",
              ],
            },
            "displayName": "styled.div",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-ksYbfQ",
            "target": "div",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          },
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <HorizontalBars
                colors={
                  Array [
                    "#024A8F",
                    "#1A4B8A",
                    "#4B98CF",
                    "#7CBCDD",
                    "#C4D2E1",
                    "#817CB8",
                    "#5A288F",
                  ]
                }
                data={
                  Array [
                    undefined,
                    undefined,
                    undefined,
                  ]
                }
              />,
              <ForwardRef
                flexWrap="wrap"
                margin="0 -1rem -1rem"
              >
                <ForwardRef
                  flex="0 0 auto"
                  padding="1rem"
                >
                  <LegendItem
                    color="#024A8F"
                    label="Single Game"
                    value="--"
                  />
                </ForwardRef>
                <ForwardRef
                  flex="0 0 auto"
                  padding="1rem"
                >
                  <LegendItem
                    color="#1A4B8A"
                    label="Group Tickets"
                    value="--"
                  />
                </ForwardRef>
                <ForwardRef
                  flex="0 0 auto"
                  padding="1rem"
                >
                  <LegendItem
                    color="#4B98CF"
                    label="Single Suites"
                    value="--"
                  />
                </ForwardRef>
              </ForwardRef>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "colors": Array [
                  "#024A8F",
                  "#1A4B8A",
                  "#4B98CF",
                  "#7CBCDD",
                  "#C4D2E1",
                  "#817CB8",
                  "#5A288F",
                ],
                "data": Array [
                  undefined,
                  undefined,
                  undefined,
                ],
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": Array [
                  <ForwardRef
                    flex="0 0 auto"
                    padding="1rem"
                  >
                    <LegendItem
                      color="#024A8F"
                      label="Single Game"
                      value="--"
                    />
                  </ForwardRef>,
                  <ForwardRef
                    flex="0 0 auto"
                    padding="1rem"
                  >
                    <LegendItem
                      color="#1A4B8A"
                      label="Group Tickets"
                      value="--"
                    />
                  </ForwardRef>,
                  <ForwardRef
                    flex="0 0 auto"
                    padding="1rem"
                  >
                    <LegendItem
                      color="#4B98CF"
                      label="Single Suites"
                      value="--"
                    />
                  </ForwardRef>,
                ],
                "flexWrap": "wrap",
                "margin": "0 -1rem -1rem",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "0",
                  "nodeType": "function",
                  "props": Object {
                    "children": <LegendItem
                      color="#024A8F"
                      label="Single Game"
                      value="--"
                    />,
                    "flex": "0 0 auto",
                    "padding": "1rem",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "color": "#024A8F",
                      "label": "Single Game",
                      "value": "--",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-kEYyzF",
                      "isStatic": false,
                      "rules": Array [
                        "
  flex: ",
                        [Function],
                        ";
  height: ",
                        [Function],
                        ";
  width: ",
                        [Function],
                        ";
  align-self: ",
                        [Function],
                        ";
  margin: ",
                        [Function],
                        ";
  padding: ",
                        [Function],
                        ";
",
                      ],
                    },
                    "defaultProps": Object {
                      "flex": 1,
                    },
                    "displayName": "FlexItem",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "sc-kEYyzF",
                    "target": "div",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  },
                },
                Object {
                  "instance": null,
                  "key": "1",
                  "nodeType": "function",
                  "props": Object {
                    "children": <LegendItem
                      color="#1A4B8A"
                      label="Group Tickets"
                      value="--"
                    />,
                    "flex": "0 0 auto",
                    "padding": "1rem",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "color": "#1A4B8A",
                      "label": "Group Tickets",
                      "value": "--",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-kEYyzF",
                      "isStatic": false,
                      "rules": Array [
                        "
  flex: ",
                        [Function],
                        ";
  height: ",
                        [Function],
                        ";
  width: ",
                        [Function],
                        ";
  align-self: ",
                        [Function],
                        ";
  margin: ",
                        [Function],
                        ";
  padding: ",
                        [Function],
                        ";
",
                      ],
                    },
                    "defaultProps": Object {
                      "flex": 1,
                    },
                    "displayName": "FlexItem",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "sc-kEYyzF",
                    "target": "div",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  },
                },
                Object {
                  "instance": null,
                  "key": "2",
                  "nodeType": "function",
                  "props": Object {
                    "children": <LegendItem
                      color="#4B98CF"
                      label="Single Suites"
                      value="--"
                    />,
                    "flex": "0 0 auto",
                    "padding": "1rem",
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "color": "#4B98CF",
                      "label": "Single Suites",
                      "value": "--",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-kEYyzF",
                      "isStatic": false,
                      "rules": Array [
                        "
  flex: ",
                        [Function],
                        ";
  height: ",
                        [Function],
                        ";
  width: ",
                        [Function],
                        ";
  align-self: ",
                        [Function],
                        ";
  margin: ",
                        [Function],
                        ";
  padding: ",
                        [Function],
                        ";
",
                      ],
                    },
                    "defaultProps": Object {
                      "flex": 1,
                    },
                    "displayName": "FlexItem",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "sc-kEYyzF",
                    "target": "div",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  },
                },
              ],
              "type": Object {
                "$$typeof": Symbol(react.forward_ref),
                "attrs": Array [],
                "componentStyle": ComponentStyle {
                  "componentId": "sc-hMqMXs",
                  "isStatic": false,
                  "rules": Array [
                    "
  display: ",
                    [Function],
                    ";
  flex: ",
                    [Function],
                    ";
  flex-direction: ",
                    [Function],
                    "
  flex-grow: ",
                    [Function],
                    ";
  flex-shrink: ",
                    [Function],
                    ";
  flex-basis: ",
                    [Function],
                    ";
  flex-wrap: ",
                    [Function],
                    ";
  order: ",
                    [Function],
                    ";
  justify-content: ",
                    [Function],
                    ";
  align-items: ",
                    [Function],
                    ";
  align-content: ",
                    [Function],
                    ";
  align-self: ",
                    [Function],
                    ";
  height: ",
                    [Function],
                    ";
  width: ",
                    [Function],
                    ";
",
                    "
    margin: ",
                    [Function],
                    ";
    margin-top: ",
                    [Function],
                    ";
    margin-bottom: ",
                    [Function],
                    ";
    margin-left: ",
                    [Function],
                    ";
    margin-right: ",
                    [Function],
                    ";

    padding: ",
                    [Function],
                    ";
    padding-top: ",
                    [Function],
                    ";
    padding-bottom: ",
                    [Function],
                    ";
    padding-left: ",
                    [Function],
                    ";
    padding-right: ",
                    [Function],
                    ";

    border: ",
                    [Function],
                    ";
    border-top: ",
                    [Function],
                    ";
    border-bottom: ",
                    [Function],
                    ";
    border-left: ",
                    [Function],
                    ";
    border-right: ",
                    [Function],
                    ";
  ",
                  ],
                },
                "displayName": "Flex",
                "foldedComponentIds": Array [
                  "sc-eNQAEJ",
                ],
                "render": [Function],
                "styledComponentId": "sc-hMqMXs",
                "target": "div",
                "toString": [Function],
                "warnTooManyClasses": [Function],
                "withComponent": [Function],
              },
            },
          ],
          "type": Symbol(react.fragment),
        },
      ],
      "type": Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-dxgOiQ",
          "isStatic": false,
          "rules": Array [
            "
  width: ",
            [Function],
            ";
  height: ",
            [Function],
            ";
",
            "
    margin: ",
            [Function],
            ";
    margin-top: ",
            [Function],
            ";
    margin-bottom: ",
            [Function],
            ";
    margin-left: ",
            [Function],
            ";
    margin-right: ",
            [Function],
            ";

    padding: ",
            [Function],
            ";
    padding-top: ",
            [Function],
            ";
    padding-bottom: ",
            [Function],
            ";
    padding-left: ",
            [Function],
            ";
    padding-right: ",
            [Function],
            ";

    border: ",
            [Function],
            ";
    border-top: ",
            [Function],
            ";
    border-bottom: ",
            [Function],
            ";
    border-left: ",
            [Function],
            ";
    border-right: ",
            [Function],
            ";
  ",
          ],
        },
        "displayName": "Styled(styled.div)",
        "foldedComponentIds": Array [
          "sc-kpOJdX",
        ],
        "render": [Function],
        "styledComponentId": "sc-dxgOiQ",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`<RevenueBreakdown /> should render the loading state correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <RevenueBreakdown
    revenueStatActions={
      Object {
        "fetch": [MockFunction] {
          "calls": Array [
            Array [
              Object {
                "seasonId": undefined,
              },
            ],
          ],
          "results": Array [
            Object {
              "isThrow": false,
              "value": undefined,
            },
          ],
        },
        "reset": [MockFunction],
      }
    }
    revenueStatState={
      Object {
        "loading": true,
        "ticketBreakdown": Array [
          Object {
            "id": 1,
            "inventory": 10000,
            "name": "Single Game",
            "revenue": 1000,
          },
          Object {
            "id": 2,
            "inventory": 5000,
            "name": "Group Tickets",
            "revenue": 1000,
          },
          Object {
            "id": 3,
            "inventory": 7000,
            "name": "Single Suites",
            "revenue": 1000,
          },
        ],
      }
    }
    type="revenue"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {},
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {},
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;
